[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "sphinxcontrib_github_alt"
author = "Jupyter Development Team"
author-email = "jupyter@googlegroups.com"
home-page = "https://github.com/jupyter/sphinxcontrib_github_alt"
description-file = "README.rst"
requires = [
    "docutils",
    "sphinx",
]
classifiers = [
    "Framework :: Sphinx :: Extension",
    "License :: OSI Approved :: BSD License",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development :: Bug Tracking",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Version Control"
]

